# coalics

./: .dockerignore  .env.sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHECKS  Dockerfile  Dockerfile.nginx  LICENSE  Procfile  README.md  app.json  circus.ini  config.prod.py  config.py  dev.sh  dev.yml  docker-compose.yml  gunicorn.py  manage.py  nginx.conf  prod.sh  production.yml  pyproject.toml  requirements.txt  rq_config.py  run.py  setup.sh  tox.ini  wsgi.py
.github/workflows/: ci.yml
ansible/: deploy.yml  hosts.ini
ansible/files/: logrotate_coalics
app/: __init__.py  broker.py  config.py  forms.py  models.py  tasks.py
app/templates/: base.html  calendar_add.html  calendar_edit.html  home.html  login.html  macros.html  source_edit.html
coalics/: __init__.py  circus_check.py  forms.py  models.py  schedule.py  tasks.py  util.py  views.py
coalics/static/: style.css
coalics/templates/: base.html  calendar_edit.html  events.html  macros.html  register.html  source_edit.html  view_source.html
coalics/tests/: test_update.py  test_util.py
migrations/versions/: 12f833559028_.py  1c02b13b8990_.py  710d54699d93_.py  8ef1e37e40b9_.py  9be22fdc43dd_.py  9f98c73ea81f_.py  be66fc3090c4_email_hashing.py  cea006e74b5c_.py  e261a8586dc6_.py  e7607c2bc445_.py  fb179d4df2b5_reinit.py
src/: requirements.txt
src/coalics/: __init__.py  circus_check.py  cli.py  config.py  forms.py  metrics.py  models.py  schedule.py  tasks.py  util.py  views.py
src/coalics/models/: __init__.py
src/coalics/static/: style.css
src/coalics/templates/: base.html  calendar_add.html  calendars.html  home.html  (+6 more)
tests/: event_fixtures.ics  test_models.py  test_user.py  test_util.py  test_views.py
(+10 files in other folders)
