[tool.poetry]
name = "coalics"
version = "1.0.0"
description = ""
license = "MIT"
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "coalics", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
redis = "^3.5.3"
Flask-Migrate = "^2.5.3"
flask_sqlalchemy = "^2.4.4"
sqlalchemy-utils = "^0.36.8"
flask-login = "^0.5.0"
alembic = "^1.4.2"
Flask-Session = "^0.3.2"
WTForms = "^2.3.1"
requests = "^2.24.0"
icalendar = "^4.0.6"
pytz = "^2020.1"
tzlocal = "^2.1"
psycopg2 = "^2.8.5"
python-dotenv = "^0.14.0"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
